# codexa

./: README.md  pyproject.toml
codexa/: __init__.py  analyzer.py  cli.py  config.py  llm.py  models.py  renderer.py
codexa/templates/: CODEXA.md.j2
tests/: test_analyzer.py  test_config.py  test_llm.py  test_models.py  test_renderer.py
tests/fixtures/sample_module/: main.py
