[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexa"
version = "0.1.0"
description = "A CLI tool that analyzes codebases and auto-generates structured markdown context files for AI coding agents."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Codexa Contributors" },
]
keywords = ["cli", "code-analysis", "documentation", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pathspec>=0.11.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
codexa = "codexa.cli:app"

[project.urls]
Homepage = "https://github.com/codexa/codexa"
Repository = "https://github.com/codexa/codexa"
Issues = "https://github.com/codexa/codexa/issues"

[tool.hatch.build.targets.wheel]
packages = ["codexa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py38"
